welcome.lessons.welcome.methods.picture.PatternPicture.scala.error
PatternPicture:34: error: expected class or object definition
def image(c:Color, d:Color) ={
^PatternPicture:49: error: Unmatched closing brace '}' ignored here
}
^