welcome.lessons.welcome.methods.picture.PatternPicture.scala.code
override def run() {
 
 
 	image(Color.red, Color.blue);
 	image(Color.blue, Color.green);
 	image(Color.green, Color.yellow)
 	image(Color.yellow, Color.red);
 	avance(4)
 	image(Color.red, Color.blue);
 	image(Color.blue, Color.green);
 	image(Color.green, Color.yellow)
 	image(Color.yellow, Color.red);
 	recule(7);
 	gauche();
 	avance(4);
 	droite();
 	image(Color.red, Color.blue);
 	image(Color.blue, Color.green);
 	image(Color.green, Color.yellow)
 	image(Color.yellow, Color.red);
 	avance(4)
 	image(Color.red, Color.blue);
 	image(Color.blue, Color.green);
 	image(Color.green, Color.yellow)
 	image(Color.yellow, Color.red);
 	recule(3);
 	
 	}
 	
}


def image(c:Color, d:Color) ={
	avance();
	setCouleurBrosse(c);
	baisseBrosse()
	leveBrosse();
	setCouleurBrosse(d);
	 avance();
	 baisseBrosse();
	leveBrosse();
	avance();
	gauche();
	
}
